force-app/main/default/objects/Contact/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Update to change Federation ID in HL_STAFF &amp; SF User</inlineHelpText>
    <label>Federation ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>