force-app/main/default/objects/Contact/fields/Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason__c</fullName>
    <label>Flag Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Has Left Company</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Duplicate Contact</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Researched - Email Correct</fullName>
            </value>
            <value>
                <fullName>Researched - With No Results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>