force-app/main/default/objects/Contact/fields/Full_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Contact_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Contact ID</label>
    <type>Text</type>
</CustomField>