force-app/main/default/objects/Contact/fields/Fully_Vaccinated_Verified__c.field-meta.xml
<CustomField>
    <fullName>Fully_Vaccinated_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Vaccinated Verified</label>
    <type>Checkbox</type>
</CustomField>