force-app/main/default/objects/Contact/fields/Functional_Title__c.field-meta.xml
<CustomField>
    <fullName>Functional_Title__c</fullName>
    <label>Functional Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>