force-app/main/default/objects/Contact/fields/General_Announcements_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>General_Announcements_Change_Date__c</fullName>
    <label>General Announcements Change Date</label>
    <type>Date</type>
</CustomField>