force-app/main/default/objects/Contact/fields/Goes_By_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Goes_By_Nickname__c</fullName>
    <label>Goes By / Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>