force-app/main/default/objects/Contact/fields/HCM_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>HCM_Cost_Center__c</fullName>
    <description>The value will be copied from Workday daily</description>
    <inlineHelpText>The value will be copied from Workday daily</inlineHelpText>
    <label>HCM Cost Center</label>
    <length>60</length>
    <type>Text</type>
</CustomField>