force-app/main/default/objects/Contact/fields/HL_Alumni__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HL Alumni</label>
    <type>Checkbox</type>
</CustomField>