force-app/main/default/objects/Contact/fields/HL_Alumni_Contact__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL Alumni Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (HL_Alumni_Contact)</relationshipLabel>
    <relationshipName>HL_Alumni_Contact_Child</relationshipName>
    <type>Lookup</type>
</CustomField>