force-app/main/default/objects/Contact/fields/HL_Alumni_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Departure_Date__c</fullName>
    <formula>HL_Alumni_Contact__r.Departure_Date__c</formula>
    <label>HL Alumni Departure Date</label>
    <type>Date</type>
</CustomField>