force-app/main/default/objects/Contact/fields/HL_Alumni_HR_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_HR_Employee_ID__c</fullName>
    <formula>HL_Alumni_Contact__r.HR_EMPLOYEEID__c</formula>
    <label>HL Alumni HR Employee ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>