force-app/main/default/objects/Contact/fields/HL_Alumni_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Industry_Group__c</fullName>
    <formula>TEXT(HL_Alumni_Contact__r.Industry_Group__c)</formula>
    <label>HL Alumni Industry Group</label>
    <type>Text</type>
</CustomField>