force-app/main/default/objects/Contact/fields/HL_Alumni_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Line_of_Business__c</fullName>
    <formula>TEXT(HL_Alumni_Contact__r.Line_of_Business__c)</formula>
    <label>HL Alumni Line of Business</label>
    <type>Text</type>
</CustomField>