force-app/main/default/objects/Contact/fields/HL_Alumni_Office__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Office__c</fullName>
    <formula>TEXT(HL_Alumni_Contact__r.Office__c)</formula>
    <label>HL Alumni Office</label>
    <type>Text</type>
</CustomField>