force-app/main/default/objects/Contact/fields/HL_Alumni_Title__c.field-meta.xml
<CustomField>
    <fullName>HL_Alumni_Title__c</fullName>
    <formula>HL_Alumni_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL Alumni Title</label>
    <type>Text</type>
</CustomField>