force-app/main/default/objects/Contact/fields/HL_Category_2__c.field-meta.xml
<CustomField>
    <fullName>HL_Category_2__c</fullName>
    <label>HL Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P/L</fullName>
            </value>
            <value>
                <fullName>PAD</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>