force-app/main/default/objects/Contact/fields/HL_Category__c.field-meta.xml
<CustomField>
    <fullName>HL_Category__c</fullName>
    <label>HL Category</label>
    <length>5</length>
    <type>Text</type>
</CustomField>