force-app/main/default/objects/Contact/fields/HL_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>HL_Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL Team Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (HL Team Manager)</relationshipLabel>
    <relationshipName>HL_Team_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>