force-app/main/default/objects/Contact/fields/HR_EMPLOYEEID__c.field-meta.xml
<CustomField>
    <fullName>HR_EMPLOYEEID__c</fullName>
    <externalId>true</externalId>
    <label>HR EMPLOYEEID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>