force-app/main/default/objects/Contact/fields/Inactive_PDC__c.field-meta.xml
<CustomField>
    <fullName>Inactive_PDC__c</fullName>
    <formula>IF(
(ISPICKVAL(Primary_PDC__r.Status__c, &apos;Inactive&apos;) ||
ISPICKVAL(Secondary_PDC__r.Status__c, &apos;Inactive&apos;)), TRUE, FALSE
)</formula>
    <inlineHelpText>TRUE if Primary or Secondary PDCs are Inactive.</inlineHelpText>
    <label>Inactive PDC</label>
    <type>Checkbox</type>
</CustomField>