force-app/main/default/objects/Contact/fields/Industry_Umbrella__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella__c</fullName>
    <formula>TEXT(Industry_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Umbrella</label>
    <type>Text</type>
</CustomField>