force-app/main/default/objects/Contact/fields/Industry_Umbrella_Head__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella_Head__c</fullName>
    <inlineHelpText>Select the Industry Umbrella this employee heads</inlineHelpText>
    <label>Industry Umbrella Head</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>