force-app/main/default/objects/Contact/fields/Industry_Umbrella_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella_REPORTING__c</fullName>
    <formula>IF(FIND( &quot; - &quot;,TEXT(Industry_Group__c) ) &gt; 0, LEFT(TEXT(Industry_Group__c), FIND( &quot; - &quot;,TEXT(Industry_Group__c) ) - 1), TEXT(Industry_Group__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Umbrella (REPORTING)</label>
    <type>Text</type>
</CustomField>