force-app/main/default/objects/Contact/fields/Inherit_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Company_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Uncheck this box if the Contact should NOT inherit any address changes from its Company.</inlineHelpText>
    <label>Inherit Company Address</label>
    <type>Checkbox</type>
</CustomField>