force-app/main/default/objects/Contact/fields/Insights_Content_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Insights_Content_Change_Date__c</fullName>
    <label>Insights/Content Change Date</label>
    <type>Date</type>
</CustomField>