force-app/main/default/objects/Contact/fields/InsightsContent__c.field-meta.xml
<CustomField>
    <fullName>InsightsContent__c</fullName>
    <label>Insights/Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>