force-app/main/default/objects/Contact/fields/JobCode__c.field-meta.xml
<CustomField>
    <fullName>JobCode__c</fullName>
    <description>Employee Job Code from workday</description>
    <label>Job Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>