force-app/main/default/objects/Contact/fields/Last_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payroll_Date__c</fullName>
    <label>Last Payroll Date</label>
    <type>Date</type>
</CustomField>