force-app/main/default/objects/Contact/fields/Last_Vaccine_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Vaccine_Date__c</fullName>
    <label>Last Vaccine Date</label>
    <type>Date</type>
</CustomField>