force-app/main/default/objects/Contact/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>Lead Source Description - used by Marketing</description>
    <label>Lead Source Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>