force-app/main/default/objects/Contact/fields/Legacy_SLX_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SLX ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>