force-app/main/default/objects/Contact/fields/Legal_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Middle_Name__c</fullName>
    <label>Legal Middle Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>