force-app/main/default/objects/Contact/fields/Legal_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Legal_Prefix__c</fullName>
    <label>Legal Prefix</label>
    <length>16</length>
    <type>Text</type>
</CustomField>