force-app/main/default/objects/Contact/fields/Legal_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Legal_Suffix__c</fullName>
    <label>Legal Suffix</label>
    <length>16</length>
    <type>Text</type>
</CustomField>