force-app/main/default/objects/Contact/fields/Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Login_ID__c</fullName>
    <description>Network Login ID</description>
    <label>Login ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>