force-app/main/default/objects/Contact/fields/Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>Mailing_County__c</fullName>
    <label>Mailing County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>