force-app/main/default/objects/Contact/fields/MailingCountry_Old__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry_Old__c</fullName>
    <description>Mailing Country before picklist turned on</description>
    <label>MailingCountry_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>