force-app/main/default/objects/Contact/fields/Management_Level__c.field-meta.xml
<CustomField>
    <fullName>Management_Level__c</fullName>
    <label>Management Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>