force-app/main/default/objects/Contact/fields/Merge_Group__c.field-meta.xml
<CustomField>
    <fullName>Merge_Group__c</fullName>
    <inlineHelpText>Used by Data Hygiene to group multiple contacts to be merged</inlineHelpText>
    <label>Merge Group</label>
    <length>32</length>
    <type>Text</type>
</CustomField>