force-app/main/default/objects/Contact/fields/Most_Recent_Contact_Email_History__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contact_Email_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Contact Email History</label>
    <referenceTo>Contact_Email_History__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>