force-app/main/default/objects/Contact/fields/Most_Recent_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Email_Status__c</fullName>
    <description>LEGACY DO NOT USE</description>
    <label>LEGACY Most Recent Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>