force-app/main/default/objects/Contact/fields/Most_Recent_Email_Validation__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Email_Validation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Email Validation</label>
    <referenceTo>Contact_Email_History__c</referenceTo>
    <relationshipLabel>Contacts (Most Recent Email Validation Status)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>