force-app/main/default/objects/Contact/fields/Most_Recent_Email_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Email_Validation_Date__c</fullName>
    <formula>Most_Recent_Email_Validation__r.Status_DateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Email Validation Date</label>
    <type>DateTime</type>
</CustomField>