force-app/main/default/objects/Contact/fields/Most_Recent_Email_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Email_Validation_Status__c</fullName>
    <formula>Most_Recent_Email_Validation__r.Email_Validation_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Email Validation Status</label>
    <type>Text</type>
</CustomField>