force-app/main/default/objects/Contact/fields/Most_Recent_Marketing_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Marketing_Email_Status__c</fullName>
    <formula>Most_Recent_Contact_Email_History__r.Marketing_Category__c</formula>
    <label>Most Recent Marketing Email Status</label>
    <type>Text</type>
</CustomField>