force-app/main/default/objects/Contact/fields/NACD__c.field-meta.xml
<CustomField>
    <fullName>NACD__c</fullName>
    <label>NACD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>