force-app/main/default/objects/Contact/fields/Name_Pronounce__c.field-meta.xml
<CustomField>
    <fullName>Name_Pronounce__c</fullName>
    <label>Name Pronounce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>